# CloudSkin-EMBL-WASINN

./: README.md
WASINN/: README.md
WASINN/RustLambdaTests/PipeLambda/: main.py
WASINN/RustLambdaTests/PipeLambdaArrayFloat/: execute.sh  lambda_function.py  main.py
WASINN/RustLambdaTests/PipeLambdaArrayInt/: main.py
WASINN/RustLambdaTests/SimpleRustLambda/: execute.sh  lambda_function.py
WASINN/Wasinn_python_rust/: WE_install.sh  WE_rerun.sh  main-nopipe.py  main-pipe-big.py  main-pipe-url.py  main-pipe.py  nopipe.wasm  output.txt  output2.txt  simplecommandmain.py  wasmedge-wasinn-example-mobilenet-image-aot.wasm  wasmedge-wasinn-example-mobilenet-image.wasm
WASINN/Wasinn_python_rust/rust-nopipe/: Cargo.toml
WASINN/Wasinn_python_rust/rust-nopipe/src/: main.rs
WASINN/Wasinn_python_rust/rust/src/: main.rs
WASINN/Wasinn_pytorch_rust_RESNET/: WE_install.sh  WE_install_pyo3.sh  WE_rerun.sh  WE_run.sh  WE_run_AOT.sh  rust-matz.wasm  wasmedge-wasinn-example-mobilenet-image-aot.wasm  wasmedge-wasinn-example-mobilenet-image.wasm
WASINN/Wasinn_pytorch_rust_RESNET/rust-matz/: Cargo.toml  pyproject.toml
WASINN/Wasinn_pytorch_rust_RESNET/rust-matz/src/: lib.rs  main.rs
WASINN/Wasinn_pytorch_rust_RESNET/rust/src/: main.rs
WASINN/Wasinnlambda/: WE_install.sh  WE_install_simple.sh  WE_install_wasinn.sh  cmake-test.py  instalation_test.py  lambda_function.py  main-pipe.py
WASINN/Wasinnlambda/dependencies/: generate_dependencies_layer.sh  requirements.txt
WASINN/wasinn_vs_pytorch/batch-cpulimit/pytorch/: main.py
(+68 files in other folders)
