[package]
name = "rust-matz"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]  }
nalgebra = "*"
wasi-nn = { version = "0.2.1" }

[dependencies.pyo3]
version = "0.18.3"
features = ["auto-initialize"]
optional = true

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]